force-app/main/default/objects/tc9_bgl__Acc_Payment_Entity__c/tc9_bgl__Acc_Payment_Entity__c.object-meta.xml
<CustomObject>
    <description>The Accounting Payment Entity Defaults object holds posting defaults associated with a particular payment entity</description>
    <label>Accounting Payment Entity Defaults</label>
    <nameField>
        <displayFormat>ACCPED-{0000000}</displayFormat>
        <label>Payment Entity Default</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Payment Entity Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>