force-app/main/default/objects/tc9_bgl__Acc_Payment_Entity__c/fields/tc9_bgl__Accounting_System__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Accounting_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting System</label>
    <referenceTo>tc9_bgl__Acc_System_Setup__c</referenceTo>
    <relationshipLabel>Payment Entity Details</relationshipLabel>
    <relationshipName>Accounting_Payment_Entity_Defaults</relationshipName>
    <type>Lookup</type>
</CustomField>