force-app/main/default/objects/tc9_bgl__Acc_Payment_Entity__c/fields/tc9_bgl__GL_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__GL_Entity_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Entity Code</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a valid Payment Entity</errorMessage>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Payment Entity</value>
        </filterItems>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.tc9_bgl__Accounting_System__c</field>
            <operation>equals</operation>
            <valueField>$Source.tc9_bgl__Accounting_System__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_Segments__c</referenceTo>
    <relationshipLabel>Accounting Payment Entity Defaults</relationshipLabel>
    <relationshipName>Accounting_Payment_Entity_Defaults</relationshipName>
    <type>Lookup</type>
</CustomField>