force-app/main/default/objects/tc9_bgl__Acc_Payment_Entity__c/listViews/tc9_bgl__All.listView-meta.xml
<ListView>
    <fullName>tc9_bgl__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_bgl__Payment_Entity__c</columns>
    <columns>tc9_bgl__Accounting_System__c</columns>
    <columns>tc9_bgl__GL_Bank_Account_Department__c</columns>
    <columns>tc9_bgl__GL_Bank_Account_Number__c</columns>
    <columns>tc9_bgl__GL_Entity_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>